<resources>
    <string name="app_name">ToDo</string>
    <string name="skip">SKIP</string>
    <string name="manage_your">Manage your tasks</string>
    <string name="you_can_eas">You can easily manage all of your daily tasks in DoMe for free</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>
    <string name="uptodo">UpTodo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_dail">Create daily routine</string>
    <string name="in_uptodo_y">In Uptodo  you can create your personalized routine to stay productive</string>
    <string name="orgonaize_y">Orgonaize your tasks</string>
    <string name="you_can_org">You can organize your daily tasks by adding your tasks into separate categories</string>
    <string name="welcome_to_">Welcome to UpTodo</string>
    <string name="please_logi">Please login to your account or create new account to continue</string>
    <string name="login">LOGIN</string>
    <string name="create_acco">CREATE ACCOUNT</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="or">or</string>
    <string name="login_with_google">Login with Google</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_with_google">Register with Google</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">REGISTER</string>
    <string name="type_your_task">Type your task</string>

</resources>