<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/arrow_left"
        style="@style/arrow_left" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/header"
            android:text="@string/welcome_to_" />

        <TextView
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="5sp"
            android:text="@string/please_logi"
            android:textAlignment="center"
            android:textAppearance="@style/you_can_eas" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/welcomeLogin"
        style="@style/buttonFilled"
        android:text="@string/login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/welcomeRegister"
        style="@style/button_bordered"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="40dp"
        android:text="@string/create_acco" />

</LinearLayout>