<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/arrow_left"
        style="@style/arrow_left" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/header2"
            android:text="Login" />

        <TextView
            style="@style/ededittextheader"
            android:layout_marginTop="20dp"
            android:text="Email"
            android:textAppearance="@style/you_can_eas" />

        <EditText
            android:id="@+id/lEmail"
            style="@style/borderededittext"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress" />

        <TextView
            style="@style/ededittextheader"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textAppearance="@style/you_can_eas" />

        <EditText
            android:id="@+id/lPassword"
            style="@style/borderededittext"
            android:hint="* * * * * * * * * * * *"
            android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            style="@style/buttonFilled"
            android:layout_marginTop="30sp"
            android:text="@string/login" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="27dp"
            android:layout_marginVertical="30dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:scaleType="fitXY"
                android:src="@drawable/line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center_horizontal"
                android:text="@string/or"
                android:textColor="@color/white" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginwithgoogle"
            style="@style/button_bordered"
            android:text="@string/login_with_google" />

    </LinearLayout>

    <LinearLayout
        style="@style/footertextgroup">

        <TextView
            style="@style/footertext"
            android:text="Don’t have an account? " />

        <TextView
            android:id="@+id/lregister"
            style="@style/coloredfootertext"
            android:text="Register" />
    </LinearLayout>

</LinearLayout>




